--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -2,7 +2,7 @@
     1: sessionOn
     2: sessionOff
 -->
-<header class="header {% if user %}sessionOn{% else %}sessionOff{% endif %}">
+<header class="header {% if logged_user %}sessionOn{% else %}sessionOff{% endif %}">
     <div class="grilla f aic jcsb">
         <div class="headerLeft">
             <a href="{% url 'landing:home' %}">
@@ -34,12 +34,12 @@
                 </div>
                 <!-- OPCIÒN CUANDO ESTA LOGEADO -->
                 <div class="headerOptionLogin f aic jcfe">
-                    <h3 class="headerNameUser">Hola {{user.names}}</h3>
+                    <h3 class="headerNameUser">Hola {{logged_user.names}}</h3>
                     <div class="headerMenu pr f aic jcc" style="display: flex;">
                         <a class="headerIconMenu icon-menu"></a>
                         <div class="headerMenuList pa t100">
                             <ul>
-                                {% if user.in_person %}
+                                {% if logged_user.in_person %}
                                     <li><a href="{{user_url}}">Mi Ticket</a></li>
                                 {% else %}
                                     <li><a href="{{user_url}}">Mi credencial</a></li>
