--- a/src/templates/landing/credencial.html
+++ b/src/templates/landing/credencial.html
@@ -41,7 +41,7 @@
                         </a>
                     </div>
                     <button type="submit" class="gButton b10GenerateCred">Generara credencial</button>
-                    <a href="#" class="b10Omitir">Omitir</a>
+                    <a href="{% url 'landing:event' %}" class="b10Omitir">Omitir</a>
                 </form>
             </div>
             <div class="b10Right scrollItem">
