--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -22,7 +22,9 @@
                 <a href="#auspiciador" class="headerAnclaBlock">Auspiciadores <span class="lineActive" style="background:#008ac9;"></span></a>
                 <a href="#networking" class="headerAnclaBlock">Networking <span class="lineActive" style="background:#008ac9;"></span></a>
                 <a href="#encuesta" class="headerAnclaBlock">Encuesta <span class="lineActive" style="background:#008ac9;"></span></a>
+                {% comment %}
                 <a href="#" class=" headerEnVivo">En vivo <img src="/static/web/img/live.svg" alt=""></a>
+                {% endcomment %}
             {% endif %}
         </div>
         <div class="headerRight f aic jcfe">
