--- a/src/templates/landing/credencial-generada.html
+++ b/src/templates/landing/credencial-generada.html
@@ -16,8 +16,8 @@
                 <h3 class="gTitle">Ya eres parte del evento "{{credential_settings.title_credential}}". </h3>
                 <label for="" class="gParrafo">Comparte la credencial en tus redes y etiquetanos como #elpoderdeladata.</label>
                 <div class="b10Links f aic jcfs">
-                    <a class="b10DownloadCredencial" href="{% url 'landing:download_credential' instance.code%}">Generara credencial <img src="/static/web/img/download.svg" alt="" width="22"></a>
-                    <a href="#" class="b10VerEvento">Ver evento</a>
+                    <a class="b10DownloadCredencial" href="{% url 'landing:download_credential' instance.code%}">Descargar credencial <img src="/static/web/img/download.svg" alt="" width="22"></a>
+                    <a href="{% url 'landing:event' %}" class="b10VerEvento">Ver evento</a>
                 </div>
             </div>
             <div class="b10Right scrollItem">
