--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -66,11 +66,11 @@
             <div class="g8GroupInput one">
                 <div class="g8Input">
                     <span>Email</span>
-                    <input type="text" id="email" class="g8Box validate[required,custom[email]]" name="{{form_login.email.html_name}}">
+                    <input type="text" id="login_email" class="g8Box validate[required,custom[email]]" name="{{form_login.email.html_name}}">
                 </div>
                 <div class="g8Input">
                     <span>Contraseña *</span>
-                    <input type="password" id="passwowrd" class="g8Box validate[required]" name="{{form_login.password.html_name}}">
+                    <input type="password" id="login_passwowrd" class="g8Box validate[required]" name="{{form_login.password.html_name}}">
                 </div>
             </div>
             <button class="g8SumitLogin">Ingresar</button>
