Fix - Set correct route to qr image

--- a/src/templates/landing/ticket_view.html
+++ b/src/templates/landing/ticket_view.html
@@ -18,7 +18,7 @@
             <div class="b15Wrap f aic jcsb">
                 <div class="b15Right f aic jcsb" style="backbround: #f2f2f2;">
                     <figure>
-                        <img src="{{domain}}{{ticket.qr.url}}" alt="" width="20">
+                        <img src="{{ticket.qr.url}}" alt="" width="20">
                     </figure>
                     <div class="b15Info ">
                         <div class="b15WrapInfo column2 column1-480" style="grid-gap: 25px;">
