Added buttons to ticket view

--- a/src/static/web/stylus/blocks/s15.styl
+++ b/src/static/web/stylus/blocks/s15.styl
@@ -13,11 +13,15 @@
         textg(t-600,normal,#262626)
     h3
         font-family t-400
+    
+.b15RightContent
+    width 840px
+
 .b15Right
     background #F2F2F2
     padding 40px
     border-radius 8px
-    width 840px
+    width 100%
     box-shadodw 0px 10px 40px -21px #00000052
     figure
         width 218px
@@ -49,6 +53,16 @@
         font-size 16px
         textg(t-500,normal,#17181B)
 
+.b15Buttons
+    flexg(center,center)
+    flex-direction column
+    margin-top 30px
+    .gButton
+        background #008ac9
+        margin-bottom 24px
+    .link
+        font-size 16px
+        textg(t-600,normal,#008ac9)
 
 @media screen and (max-width 1366px)
     .b15Left
