--- a/src/templates/landing/credencial.html
+++ b/src/templates/landing/credencial.html
@@ -22,7 +22,7 @@
                         <input type="text" id="namePerson" class="g8Box validate[required,custom[onlyLetterSp]]" name="{{form.names.html_name}}">
                     </div>
                     <div class="b10ContentFile">
-                        <input type="file" id="fileInput" class="validate[required]" accept="image/jpeg, image/png">
+                        <input type="file" id="fileInput" accept="image/jpeg, image/png">
                         <label for="" class="b10WrapFile f aic jcc fdc">
                             <div class="b10FileImage f aic jcc">
                                 <img src="/static/web/img/icon-image.png" alt="">
