--- a/src/templates/landing/evento-detalle.html
+++ b/src/templates/landing/evento-detalle.html
@@ -24,9 +24,9 @@
     -->
     <div class="grilla f center jcfs">
         <div class="b1Info top">
-            <h2 class="scrollItem">{{home_page.first_title}}</h2>
-            <h1 class="scrollItem">{{home_page.main_title}}</h1>
-            <h3 class="scrollItem">{{home_page.secondary_title}}</h3>
+            <h2 class="scrollItem">{{home_page.first_title|default:""}}</h2>
+            <h1 class="scrollItem">{{home_page.main_title|default:""}}</h1>
+            <h3 class="scrollItem">{{home_page.secondary_title|default:""}}</h3>
             {% if home_page.home_video_url %}
                 <a href="#" class="clickVideo popup scrollItem" data-urlvideo="{{home_page.home_video_url}}">
                     <span>Ver video</span>
@@ -37,61 +37,18 @@
             <div class="b1Date f aifs jcfs scrollItem">
                 <div class="b1DateItem f aifs jcfs">
                     <img src="/static/web/img/calendario.svg" alt="" width="20">
-                <h4>{{home_page.date_description}}<span>{{home_page.time_description}}</span>{{company.access_type}}</h4>
+                <h4>{{home_page.date_description}}<span>{{home_page.time_description}}</span></h4>
                 </div>
                 {% if not company.in_person %}
                     <div class="b1DateItem f aifs jcfs">
                         <img src="/static/web/img/virtual.svg" alt="" width="20">
-                        <h4>Virtual<span>Zoom meetings</span></h4>
+                        <h4>Virtual</h4>
                     </div>
                 {% endif %}
             </div>
         </div>
     </div>
 </section>
-
-{% comment %}
-<section class="b9">
-    <div class="grilla f aic jcsb">
-        <div class="b9Item f aifs jcfs">
-            <figure>
-                <img src="{{STATIC_URL}}img/calendario-black.svg" alt="" width="24"> 
-            </figure>
-            <div class="b9TextItem">
-                <h4>Fecha</h4>
-                <h5>19 de Mar. 2024</h5>
-            </div>
-        </div>
-        <div class="b9Item f aifs jcfs">
-            <figure>
-                <img src="{{STATIC_URL}}img/time.svg" alt="" width="24"> 
-            </figure>
-            <div class="b9TextItem">
-                <h4>Fecha</h4>
-                <h5>19 de Mar. 2024</h5>
-            </div>
-        </div>
-        <div class="b9Item f aifs jcfs">
-            <figure>
-                <img src="{{STATIC_URL}}img/live-black.svg" alt="" width="24"> 
-            </figure>
-            <div class="b9TextItem">
-                <h4>Fecha</h4>
-                <h5>19 de Mar. 2024</h5>
-            </div>
-        </div>
-        <div class="b9Item f aifs jcfs">
-            <figure>
-                <img src="{{STATIC_URL}}img/person.svg" alt="" width="24"> 
-            </figure>
-            <div class="b9TextItem">
-                <h4>Fecha</h4>
-                <h5>19 de Mar. 2024</h5>
-            </div>
-        </div>
-    </div>
-</section>
-{% endcomment %}
 
 <section class="b3 f aic jcsb scrollWrap anclaBlock" id="acerca">
     <div class="b3Left f aifs jcfs scrollItem">
@@ -106,7 +63,7 @@
                         <!-- Cambiar logica al click con datas -->
                         <a href="#" class="b3ClickToggle" data-color-initial="#008AC9" data-color-active="#17181B">
                             {{row.title}}
-                            <span class="circleLessMore"></span>
+                                <span class="circleLessMore"></span>
                         </a>
                         <div class="b3Info">
                             <div class="gParrafo">
@@ -121,13 +78,13 @@
     <div class="b3Right scrollItem">
         <picture class="imgCover">
             <!-- imagen mobile -->
-            <source srcset="/static/web/img/b3_img_fondo.png" media="(max-width: 767px)">
+            <source srcset="{{home_page.main_event_image.url}}" media="(max-width: 767px)">
             <!-- imagen desktop -->
-            <source srcset="/static/web/img/b3_img_fondo.png" media="(max-width: 768px)">
+            <source srcset="{{home_page.main_event_image.url}}" media="(max-width: 768px)">
             <!-- imagen desktop -->
-            <img src="/static/web/img/b3_img_fondo.png" width="1920" height="713"  alt="Myimage">
+            <img src="{{home_page.main_event_image.url}}" width="1920" height="713"  alt="Myimage">
         </picture>
-        <a href="#" class="clickVideo popup " data-urlvideo="https://www.youtube.com/watch?v=l6_nRqIz_9o">
+        <a href="#" class="clickVideo popup " data-urlvideo="{{home_page.main_event_video_url}}">
             <span>Ver video</span>
             <!-- linea circular animada administrable -->
             <div class="lineCircleAnimate" style="border:2px solid #008AC9;"></div>
@@ -146,7 +103,7 @@
             <div class="b4Tabs f aic jcfe">
                 {% for event in events %}
                 <a href="" class="b4ClickTab">
-                    <h5>Dia 01<span>19 de Marzo</span></h5>
+                    <h5>{{event.name}}<span>{{event.get_date}}</span></h5>
                     <div class="lineActive" style="background:#008AC9;"></div>
                 </a>
                 {% endfor %}
@@ -168,27 +125,33 @@
                     {% for schedule in event.get_schedules %}
                         {% if schedule.description %}
                             <!-- Si el evento no tiene imagen se agrega la clase "noImage" -->
-                            <div class="b4Item f aic jcsb noImage">
+                            <div class="b4Item f aic jcsb">
                                 <div class="b4ItemLeft f aifs jcfs">
-                                    <div class="b4Img pr">
-                                        <picture class="imgCover">
-                                            <!-- imagen mobile -->
-                                            <source srcset="/static/web/img/b4-img1.png" media="(max-width: 767px)">
-                                            <!-- imagen desktop -->
-                                            <source srcset="/static/web/img/b4-img1.png" media="(max-width: 768px)">
-                                            <!-- imagen desktop -->
-                                            <img src="/static/web/img/b4-img1.png" width="1920" height="713"  alt="Myimage">
-                                        </picture>
-                                    </div>
+                                    {% if schedule.image %}
+                                        <div class="b4Img pr">
+                                            <picture class="imgCover">
+                                                <!-- imagen mobile -->
+                                                <source srcset="{{schedule.image.url}}" media="(max-width: 767px)">
+                                                <!-- imagen desktop -->
+                                                <source srcset="{{schedule.image.url}}" media="(max-width: 768px)">
+                                                <!-- imagen desktop -->
+                                                <img src="{{schedule.image.url}}" width="1920" height="713"  alt="Myimage">
+                                            </picture>
+                                        </div>
+                                    {% endif %}
                                     <div class="b4Info">
                                         {% comment %} <h3>08:30 -09:00</h3> {% endcomment %}
                                         <h3>{{schedule.start_time}} - {{schedule.end_time}}</h3>
                                         <h4>{{schedule.name}}</h4>
                                         <div class="gParrafo">
-                                            <p>{{schedule.name}}</p>
+                                            <p>{{schedule.description}}</p>
                                         </div>
-                                        {% comment %} <a href="#" class="b4Envivo">En vivo <img src="/static/web/img/live.svg" alt=""></a> {% endcomment %}
-                                        <a href="#" class="b4VolverVer a ver">Volver a ver</a>
+                                        {% if schedule.get_current_status == 'is_live' %}
+                                            <a href="#" class="b4Envivo">En vivo <img src="/static/web/img/live.svg" alt=""></a>
+                                        {% endif %}
+                                        {% if schedule.get_current_status == 'past' and schedule.video_url %}
+                                            <a href="#" class="b4VolverVer a ver clickVideo popup" data-urlvideo="{{schedule.video_url}}">Volver a ver</a>
+                                        {% endif %}
                                     </div>
                                 </div>
                                 <div class="b4ItemRight">
@@ -230,11 +193,12 @@
     <div class="b4PopupImage">
         <picture class="imgCover">
             <!-- imagen mobile -->
-            <source srcset="/static/web/img/b4ImagePopup.png" media="(max-width: 767px)">
+            {% comment %} <source srcset="/static/web/img/b4ImagePopup.png" media="(max-width: 767px)" class="Myimagesource"> {% endcomment %}
+            <source srcset="" media="(max-width: 767px)" class="Myimagesource">
             <!-- imagen desktop -->
-            <source srcset="/static/web/img/b4ImagePopup.png" media="(max-width: 768px)">
+            <source srcset="" media="(max-width: 768px)" class="Myimagesource">
             <!-- imagen desktop -->
-            <img src="/static/web/img/b4ImagePopup.png" width="1920" height="713"  alt="Myimage">
+            <img src="" class="b4Image" width="1920" height="713"  alt="Myimage">
         </picture>
     </div>
     <div class="b4InfoPopup f aic jcfs">
@@ -387,7 +351,6 @@
         </div>
     </div>
 </section>
-
 {% endblock %}
 
 {% block jsfinal %}
@@ -420,8 +383,9 @@
         let elb4PopupText = document.getElementsByClassName("b4PopupText")[0];
         let elb4linkedin = document.getElementsByClassName("b4linkedin")[0];
         let elb4Popup = document.getElementsByClassName("b4Popup")[0];
+        let elb4Img = document.getElementsByClassName("b4Image")[0];
         let elb4ClosePopup = document.getElementsByClassName("b4ClosePopup")[0];
-
+        console.log(elb4Img, 'elb4Img')
         for(const b4OpenPopupPerson of elb4OpenPopupPerson){
             b4OpenPopupPerson.addEventListener("click",function(e){
                 e.preventDefault();
@@ -432,10 +396,17 @@
                 let getCargo = this.dataset.cargo;
                 let getInfo = this.dataset.info;
                 let getUrl = this.dataset.url;
+                let getImg = this.dataset.img;
 
                 elb4PopupName.innerText = getName;
                 elb4PopupCargo.innerText = getCargo;
                 elb4PopupText.innerHTML = getInfo;
+                elb4Img.src = getImg;
+                const images = document.getElementsByClassName("Myimagesource");
+                console.log(images, 'IMAGES')
+                for (let i = 0; i < images.length; i++) {
+                   images.item(i).srcset = getImg
+                }
                 elb4linkedin.setAttribute("value",getUrl);
             });
         }
