--- a/src/templates/landing/evento-detalle.html
+++ b/src/templates/landing/evento-detalle.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 </section>
-
+{% if header_section.show_about_section %}
 <section class="b3 f aic jcsb scrollWrap anclaBlock" id="acerca">
     <div class="b3Left f aifs jcfs scrollItem">
         <div class="b3ContentLeft">
@@ -88,10 +88,12 @@
             <span>Ver video</span>
             <!-- linea circular animada administrable -->
             <div class="lineCircleAnimate" style="border:2px solid #008AC9;"></div>
-        </a> 
+        </a>
     </div>
 </section>
+{% endif %}
 
+{% if header_section.show_schedule_section %}
 <section class="b4 scrollWrap anclaBlock" id="agenda">
     <div class="grilla">
         <div class="b4Top f aife jcsb ffrw scrollItem">
@@ -107,14 +109,6 @@
                     <div class="lineActive" style="background:#008AC9;"></div>
                 </a>
                 {% endfor %}
-                {% comment %} <a href="" class="b4ClickTab">
-                    <h5>Dia 01<span>19 de Marzo</span></h5>
-                    <div class="lineActive" style="background:#008AC9;"></div>
-                </a>
-                <a href="" class="b4ClickTab">
-                    <h5>Dia 01<span>19 de Diciembre</span></h5>
-                    <div class="lineActive" style="background:#008AC9;"></div>
-                </a> {% endcomment %}
                 <div class="lineColorFull" style="background:#D7E9F0;"></div>
             </div>
         </div>
@@ -212,8 +206,10 @@
         </div>
     </div>
 </div>
+{% endif %}
 
 
+{% if header_section.show_gallery_section %}
 <section class="b5 scrollWrap anclaBlock" id="galeria">
     <div class="grilla">
         <h4>Conoce más</h4>
@@ -253,7 +249,8 @@
         </div>
     </div>
 </section>
-
+{% endif %}
+{% if header_section.show_sponsors_section %}
 <section class="b6 anclaBlock anclaBlock" id="auspiciador">
     <div class="grilla">
         <div class="b6Top">
@@ -272,7 +269,8 @@
         </div>
     </div>
 </section>
-
+{% endif %}
+{% if header_section.show_networking_section %}
 <div class="b16Popup">
     <!-- <a href="#" class="icon-close"></a> -->
     <div class="b16PopupContent">
@@ -286,8 +284,9 @@
         </div>
     </div>
 </div>
+{% endif %}
 
-
+{% if header_section.show_survey_section %}
 <section class="b7 anclaBlock" id="encuesta">
     <!-- Que todo sea -->
     <a href="#" class="grilla">
@@ -300,7 +299,8 @@
         <span><img src="/static/web/img/arrow.svg" alt=""></span>
     </a>
 </section>
-
+{% endif %}
+{% if header_section.show_more_events %}
 <section class="b8 scrollWrap" data-initial="3">
     <div class="grilla">
         <div class="b8Top f aic jcsb">
@@ -351,6 +351,9 @@
         </div>
     </div>
 </section>
+{% endif %}
+
+
 {% endblock %}
 
 {% block jsfinal %}
