--- a/src/static/web/css/blocks_styl.css
+++ b/src/static/web/css/blocks_styl.css
@@ -301,3 +301,150 @@ body{height:fit-content}body.noScroll{overflow:hidden}.grilla{width:94%;max-widt
 .b9{padding:24px 0}.b9Item{height:140px;padding:38px 24px;border-radius:8px;-webkit-box-shadow:0 11px 30px 0 rgba(0,0,0,0.051);box-shadow:0 11px 30px 0 rgba(0,0,0,0.051);width:32%;margin-right:2%}.b9Item:nth-child(4n){margin-right:0}.b9TextItem{width:calc(100% - 24px);padding-left:8px}.b9TextItem h4{font-size:18px;font-family:'DMSans-Medium',sans-serif;line-height:normal;color:#828282}.b9TextItem h5{font-size:20px;font-family:'DMSans-Medium',sans-serif;line-height:normal;color:#17181b}
 footer{background:#333;padding:60px 0}footer h3{font-size:28px;font-family:'DMSans-SemiBold',sans-serif;line-height:normal;color:#fff;max-width:340px;width:100%}.footerRedes{width:100%}.footerWsp img{margin-right:10px}.footerWsp h4{font-size:14px;font-family:'DMSans-Regular',sans-serif;line-height:normal;color:#fff;text-transform:uppercase}.footerWsp h4 span{display:block;width:100%;font-size:20px;font-family:'DMSans-Bold',sans-serif;line-height:normal;color:#fff;margin-top:10px}.footerRedesContent{max-width:230px;width:100%}.footerRedesContent h4{font-size:14px;font-family:'DMSans-Medium',sans-serif;line-height:normal;color:#fff;margin-bottom:10px;text-transform:uppercase}@media screen and (max-width:1366px){footer h3{font-size:24px;max-width:300px}}@media screen and (max-width:1024px){footer h3{font-size:20px;max-width:250px}}@media screen and (max-width:768px){footer .grilla{-webkit-box-orient:vertical;-moz-box-orient:vertical;-o-box-orient:vertical;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column}footer h3{margin-bottom:40px;text-align:center}.footerWsp{margin-bottom:40px}.footerWsp img{width:50px}.footerRedesContent h4{text-align:center}.footerRedes{-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center}.footerRedes a{margin-right:10px}.footerRedes a:last-child{margin-right:0}}@media screen and (max-width:768px){footer h3{font-size:18px;max-width:250px}}
 .header{height:90px;position:fixed;background:#fff;-webkit-box-shadow:0 0 10px 10px rgba(0,0,0,0.1);box-shadow:0 0 10px 10px rgba(0,0,0,0.1);width:100%;z-index:102;top:0;left:0}.header .grilla{max-width:1440px;height:100ut;display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;-webkit-box-pack:justify;-moz-box-pack:justify;-o-box-pack:justify;-ms-flex-pack:justify;-webkit-justify-content:space-between;justify-content:space-between}.headerRight,.headerMenuContent,.headerMenuWrap,.headerMenuItem,.headerMenuLink{height:100%}.headerMenuWrap{display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;-webkit-box-pack:end;-moz-box-pack:end;-o-box-pack:end;-ms-flex-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end}.headerMenuItem{height:100%;position:relative}@media screen and (min-width:1025px){.headerMenuItem:hover .headerMegamenuContent{display:block}}.headerMenuLink{display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;padding:0 15px}.headerMegamenuContent{display:none;background:#fff}.headerMegamenuContent.absolute{top:100%;position:absolute;left:0;right:0;margin:auto}.headerMegamenuContent.fixed{top:90px;width:100%;position:absolute;left:0;right:0;margin:auto;position:fixed}.openSidebarMobile{position:fixed;z-index:200;top:0;right:20px;display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;display:none;font-size:30px}.sidebarContentMobile{position:fixed;top:0;right:0;z-index:180;height:100vh;width:100%;background:#dbdbdb;-webkit-transform:translateX(100%);-moz-transform:translateX(100%);-o-transform:translateX(100%);-ms-transform:translateX(100%);transform:translateX(100%);-webkit-transition:all 400ms ease;-moz-transition:all 400ms ease;-o-transition:all 400ms ease;-ms-transition:all 400ms ease;transition:all 400ms ease}.header{height:100px}.header .grilla{height:100%}.header.sessionOn .headerOptionLogout{display:none}.header.sessionOff .headerOptionLogin{display:none}.headerLeft,.headerRight{height:100%}.headerLeft a{height:100%;display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center}.headerAnclas{height:100%;position:absolute;left:0;right:0;margin:auto;pointer-events:none}.headerAnclas a{height:100%;display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;pointer-events:all}.headerAnclas a{padding:0 20px;font-size:18px;font-family:'DMSans-Regular',sans-serif;line-height:normal;color:#17181b}.headerAnclas a.headerEnVivo{padding:0 24px;height:44px !important;border-radius:100px;background:#008ac9;top:20px;right:60px;display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;font-size:16px;font-family:'DMSans-ExtraBold',sans-serif;line-height:normal;color:#fff;width:fit-content;margin-left:28px}.headerAnclas a.headerEnVivo img{margin-left:8px;-webkit-animation:onda 1s infinite ease-out;-moz-animation:onda 1s infinite ease-out;-o-animation:onda 1s infinite ease-out;-ms-animation:onda 1s infinite ease-out;animation:onda 1s infinite ease-out}.headerAnclaBlock{position:relative}.headerAnclaBlock .lineActive{height:4px;position:absolute;bottom:0;position:absolute;left:0;right:0;margin:auto;width:0%;-webkit-transition:all 400ms ease;-moz-transition:all 400ms ease;-o-transition:all 400ms ease;-ms-transition:all 400ms ease;transition:all 400ms ease}.headerAnclaBlock.active .lineActive{width:100%;-webkit-transition:all 400ms ease;-moz-transition:all 400ms ease;-o-transition:all 400ms ease;-ms-transition:all 400ms ease;transition:all 400ms ease}.headerOptionsSessions{height:100%}.headerOptionLogout{height:100%}.headerOptionLogout .login{font-size:16px;font-family:'DMSans-SemiBold',sans-serif;line-height:normal;color:#17181b;margin-right:20px}.headerButtonRegistrate{padding:0 20px;height:40px;border-radius:100px;font-size:16px;color:#fff;background:#008ac9;display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center}.headerOptionLogin{height:100%}.headerNameUser{font-size:16px;font-family:'DMSans-Medium',sans-serif;line-height:normal;color:#17181b;margin-right:20px}.headerIconMenu{padding:6px 20px;padding-right:0;border-left:1px solid #262626;font-size:30px;color:#17181b}.headerMenu{height:100%;display:none}.headerOptionLogin{cursor:pointer}.headerOptionLogin:hover .headerMenuList{opacity:1;-ms-filter:none;filter:none;visibility:visible;-webkit-transition:all 400ms cubic-bezier(0.78, 0.13, 0.24, 0.88);-moz-transition:all 400ms cubic-bezier(0.78, 0.13, 0.24, 0.88);-o-transition:all 400ms cubic-bezier(0.78, 0.13, 0.24, 0.88);-ms-transition:all 400ms cubic-bezier(0.78, 0.13, 0.24, 0.88);transition:all 400ms cubic-bezier(0.78, 0.13, 0.24, 0.88);pointer-events:all;-webkit-transform:scale(1);-moz-transform:scale(1);-o-transform:scale(1);-ms-transform:scale(1);transform:scale(1)}.headerMenuList{border-radius:10px;background:#fff;-webkit-box-shadow:0 0 10px 3px rgba(0,0,0,0.1);box-shadow:0 0 10px 3px rgba(0,0,0,0.1);width:500%;right:0;opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0);visibility:hidden;-webkit-transition:all 400ms cubic-bezier(0.78, 0.13, 0.24, 0.88);-moz-transition:all 400ms cubic-bezier(0.78, 0.13, 0.24, 0.88);-o-transition:all 400ms cubic-bezier(0.78, 0.13, 0.24, 0.88);-ms-transition:all 400ms cubic-bezier(0.78, 0.13, 0.24, 0.88);transition:all 400ms cubic-bezier(0.78, 0.13, 0.24, 0.88);pointer-events:none;-webkit-transform:scale(.95);-moz-transform:scale(.95);-o-transform:scale(.95);-ms-transform:scale(.95);transform:scale(.95)}.headerMenuList ul{padding:20px}.headerMenuList ul a{padding:5px 0}.headerMenuList a{font-size:16px;font-family:'DMSans-Regular',sans-serif;line-height:normal;color:#000}.headerMenuList a.logout{padding:20px;border-top:1px solid #dbdbdb}.netWorkingFixed{display:-webkit-box;display:-moz-box;display:-webkit-flex;width:100px;height:100px;background:#8fc7e2;border-radius:50%;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-box-shadow:0 15px 18.7px 0 rgba(28,54,66,0.302);box-shadow:0 15px 18.7px 0 rgba(28,54,66,0.302);position:fixed;z-index:600;bottom:30px;right:30px}.netWorkingFixed h3{font-size:12px;font-family:'DMSans-ExtraBold',sans-serif;line-height:normal;color:#fff;position:relative;z-index:10}.netWorkingFixed:before{content:'';display:-webkit-box;display:-moz-box;display:-webkit-flex;width:86px;height:86px;background:#008ac9;border-radius:50%;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;position:absolute;left:0;right:0;margin:auto;top:50%;-webkit-transform:translateY(-50%);-moz-transform:translateY(-50%);-o-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%);position:absolute;z-index:-1}@media screen and (max-width:1366px){.headerAnclas a{padding:0 14px;font-size:16px}}@media screen and (max-width:1024px){.headerMenuContent{display:none}.headerMenuWrap{-webkit-box-orient:vertical;-moz-box-orient:vertical;-o-box-orient:vertical;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:start;-moz-box-pack:start;-o-box-pack:start;-ms-flex-pack:start;-webkit-justify-content:flex-start;justify-content:flex-start;padding-top:50px;padding-bottom:30px;overflow-y:scroll}.sidebarContentMobile.active{-webkit-transform:translateX(0%);-moz-transform:translateX(0%);-o-transform:translateX(0%);-ms-transform:translateX(0%);transform:translateX(0%);-webkit-transition:all 400ms ease;-moz-transition:all 400ms ease;-o-transition:all 400ms ease;-ms-transition:all 400ms ease;transition:all 400ms ease}.headerMenuItem,.headerMenuLink{height:auto;width:100%}.openSidebarMobile{display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex}.headerMegamenuContent{position:relative;display:block;top:0}.headerMegamenuContent.fixed,.headerMegamenuContent.absolute{position:relative;top:0}.headerAnclas{display:none}.headerLeft{width:120px}.header{height:80px}.headerMenu{display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex}}@media screen and (max-width:480px){.headerButtonRegistrate{padding:0 15px;font-size:14px}.headerOptionLogout .login{font-size:14px;margin-right:15px}}@-moz-keyframes animateZoom{0%{-webkit-transform:scale(.2);-moz-transform:scale(.2);-o-transform:scale(.2);-ms-transform:scale(.2);transform:scale(.2);opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}50%{-webkit-transform:scale(1);-moz-transform:scale(1);-o-transform:scale(1);-ms-transform:scale(1);transform:scale(1);opacity:.5;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";filter:alpha(opacity=50)}100%{-webkit-transform:scale(1.05);-moz-transform:scale(1.05);-o-transform:scale(1.05);-ms-transform:scale(1.05);transform:scale(1.05);opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}}@-webkit-keyframes animateZoom{0%{-webkit-transform:scale(.2);-moz-transform:scale(.2);-o-transform:scale(.2);-ms-transform:scale(.2);transform:scale(.2);opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}50%{-webkit-transform:scale(1);-moz-transform:scale(1);-o-transform:scale(1);-ms-transform:scale(1);transform:scale(1);opacity:.5;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";filter:alpha(opacity=50)}100%{-webkit-transform:scale(1.05);-moz-transform:scale(1.05);-o-transform:scale(1.05);-ms-transform:scale(1.05);transform:scale(1.05);opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}}@-o-keyframes animateZoom{0%{-webkit-transform:scale(.2);-moz-transform:scale(.2);-o-transform:scale(.2);-ms-transform:scale(.2);transform:scale(.2);opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}50%{-webkit-transform:scale(1);-moz-transform:scale(1);-o-transform:scale(1);-ms-transform:scale(1);transform:scale(1);opacity:.5;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";filter:alpha(opacity=50)}100%{-webkit-transform:scale(1.05);-moz-transform:scale(1.05);-o-transform:scale(1.05);-ms-transform:scale(1.05);transform:scale(1.05);opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}}@keyframes animateZoom{0%{-webkit-transform:scale(.2);-moz-transform:scale(.2);-o-transform:scale(.2);-ms-transform:scale(.2);transform:scale(.2);opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}50%{-webkit-transform:scale(1);-moz-transform:scale(1);-o-transform:scale(1);-ms-transform:scale(1);transform:scale(1);opacity:.5;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";filter:alpha(opacity=50)}100%{-webkit-transform:scale(1.05);-moz-transform:scale(1.05);-o-transform:scale(1.05);-ms-transform:scale(1.05);transform:scale(1.05);opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}}
+
+.b3List a,
+.b3List .onlyTextList {
+  height: 84px;
+  font-size: 22px;
+  font-family: 'DMSans-Medium', sans-serif;
+  line-height: normal;
+  color: #17181b;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  position: relative;
+  padding-right: 60px;
+}
+.b3List a .circleLessMore,
+.b3List .onlyTextList .circleLessMore {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  position: absolute;
+  right: 0;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  width: 50px;
+  height: 50px;
+  background: transparent;
+  border-radius: 50%;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  color: #fff;
+}
+.b3List a .circleLessMore:before,
+.b3List .onlyTextList .circleLessMore:before {
+  content: '\e922';
+  font-family: 'icomoon';
+}
+.b3List a.active .circleLessMore:before,
+.b3List .onlyTextList.active .circleLessMore:before {
+  content: '\e911';
+}
+.b3ItemList {
+  border-bottom: 1px solid #e0e0e0;
+}
+.b3ItemList:last-child {
+  border-bottom: 0px;
+}
+.b3ItemList.noToggle a,
+.b3ItemList.noToggle .onlyTextList {
+  padding-right: 0px;
+  height: auto;
+  padding: 30px 0px;
+}
+.b3ItemList.noToggle .b3ClickToggle .circleLessMore {
+  display: none;
+}
+.b3ContentLeft {
+  padding: 70px;
+  height: 100%;
+  overflow-y: auto;
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  -o-box-orient: horizontal;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+}
+.b3Info .gParrafo {
+  padding-bottom: 20px;
+  padding-right: 50px;
+}
+.b3InfoItem {
+  width: 45%;
+}
+.b3InfoItem figure {
+  margin-bottom: 8px;
+}
+.b3InfoItem h4 {
+  font-size: 24px;
+  font-family: 'DMSans-Bold', sans-serif;
+  line-height: normal;
+  color: #262626;
+  margin-bottom: 4px;
+}
+.b3InfoItem h5 {
+  font-size: 16px;
+  font-family: 'DMSans-Regular', sans-serif;
+  line-height: normal;
+  color: #262626;
+}
+.b3Right {
+  position: relative;
+}
+.b3Right .clickVideo {
+  top: initial;
+  -webkit-transform: initial;
+  -moz-transform: initial;
+  -o-transform: initial;
+  -ms-transform: initial;
+  transform: initial;
+  left: 55px;
+  bottom: 55px;
+  right: initial;
+}
+@media screen and (max-width: 1366px) {
+  .b3ContentLeft {
+    padding: 50px;
+  }
+  .b3List a,
+  .b3List .onlyTextList {
+    font-size: 18px;
+  }
+}
